fixed signed division (?)

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 
 .vscode/sftp.json
 .DS_Store
+umasm/Test/Input/randomInput.test
+umasm/Test/Input/testRandom.test
+umasm/Test/Input/randomInput.test
+umasm/Test/Input/randomInput.test
